feat: enhance MeetingForm with improved validation and error handling
- Updated MeetingForm to validate user input before processing payments, providing clearer error messages for form validation failures.
- Refactored BookingFormSimple to include validation logic, ensuring required fields are checked and errors are displayed appropriately.
- Improved user experience by preventing double submissions and displaying loading states during form processing.
- Added comprehensive tests for form validation, submission flows, and error handling to ensure robustness.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@
 
 # testing
 /coverage
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
 
 # next.js
 /.next/
@@ -38,3 +42,6 @@ next-env.d.ts
 /cal.com
 _backup_.env
 _backup_env
+
+# clerk configuration (can include secrets)
+/.clerk/
