--- a/package.json
+++ b/package.json
@@ -26,21 +26,25 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "// ========== TESTING ==========": "",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:critical": "jest tests/api/create-payment-intent.test.ts tests/api/webhooks/ tests/api/getValidTimesFromSchedule.test.ts --passWithNoTests",
-    "test:integration": "jest tests/integration",
-    "test:e2e": "jest tests/e2e",
-    "test:webhooks": "jest tests/api/webhooks/ --passWithNoTests",
-    "test:payment": "jest tests/api/create-payment-intent.test.ts --passWithNoTests",
-    "test:scheduling": "jest tests/api/getValidTimesFromSchedule.test.ts --passWithNoTests",
-    "test:novu": "jest tests/lib/novu-workflow-fix.test.ts --passWithNoTests",
-    "test:novu:integration": "NOVU_INTEGRATION_TEST=true jest tests/integration/novu-workflow-execution.test.ts --passWithNoTests",
-    "test:deprecated": "jest tests/deprecated/ --passWithNoTests",
+    "// ========== TESTING (Vitest) ==========": "",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
+    "test:critical": "vitest run tests/api/create-payment-intent.test.ts tests/api/webhooks/ tests/api/getValidTimesFromSchedule.test.ts",
+    "test:integration": "vitest run tests/integration",
+    "test:webhooks": "vitest run tests/api/webhooks/",
+    "test:payment": "vitest run tests/api/create-payment-intent.test.ts",
+    "test:scheduling": "vitest run tests/api/getValidTimesFromSchedule.test.ts",
+    "test:novu": "vitest run tests/lib/novu-workflow-fix.test.ts",
+    "test:novu:integration": "NOVU_INTEGRATION_TEST=true vitest run tests/integration/novu-workflow-execution.test.ts",
     "test:security": "node scripts/test-enhanced-security.js",
     "test:email": "tsx scripts/test-email-templates.mjs",
+    "// ========== E2E TESTING (Playwright) ==========": "",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
     "// ========== QSTASH (Cron Jobs) ==========": "",
     "qstash:dev": "npx @upstash/qstash-cli@latest dev",
     "qstash:check": "node scripts/utilities/check-qstash-env.js",
@@ -186,20 +190,21 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
-    "@jest/globals": "^29.7.0",
     "@next/bundle-analyzer": "^15.5.6",
+    "@playwright/test": "^1.57.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.19",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@types/jest": "^29.5.14",
     "@types/node": "^22.18.12",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
+    "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/coverage-v8": "^4.0.15",
     "babel-plugin-react-compiler": "^1.0.0",
     "concurrently": "^9.2.1",
     "cross-env": "^7.0.3",
@@ -211,8 +216,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^26.1.0",
     "lint-staged": "^15.5.2",
     "novu": "^2.7.0",
     "postcss": "^8.5.6",
@@ -221,10 +225,11 @@
     "react-email": "^4.3.2",
     "shadcn": "^3.5.0",
     "tailwindcss": "^3.4.18",
-    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^4.0.15"
   },
   "overrides": {
     "punycode": "^2.3.1"
@@ -243,7 +248,7 @@
     "*.{ts,tsx}": [
       "eslint --fix",
       "prettier --write",
-      "jest --findRelatedTests --passWithNoTests"
+      "vitest related --run"
     ],
     "*.{js,jsx,json,css,md}": [
       "prettier --write"
