chore: Update Node.js version across configurations and package settings
- Updated .nvmrc to specify Node.js version 24.
- Added engines field in package.json to enforce Node.js version 24 or higher.
- Modified GitHub workflows to use Node.js version 24 for CI jobs, ensuring consistency across environments.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.3.1",
   "private": true,
   "packageManager": "pnpm@9.2.0",
+  "engines": {
+    "node": ">=24.0.0"
+  },
   "scripts": {
     "// ========== DEVELOPMENT ==========": "",
     "dev": "concurrently --kill-others --names \"NEXT,QSTASH\" --prefix-colors \"cyan,magenta\" \"pnpm dev:next\" \"pnpm qstash:dev\"",
