feat: Integrate next-video for enhanced video handling and Mux support
- Added next-video package to manage video playback and Mux integration seamlessly.
- Updated the Hero component to utilize BackgroundVideo for improved video rendering.
- Removed obsolete video assets and adjusted the .gitignore to exclude unnecessary files.
- Enhanced README with Mux configuration details for better setup guidance.
- Updated tsconfig to include video type definitions for TypeScript support.

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,10 @@ next-env.d.ts
 /cal.com
 _backup_.env
 _backup_env
+
+# next-video
+videos/*
+!videos/*.json
+!videos/*.js
+!videos/*.ts
+public/_next-video
