--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
     "allowArbitraryExtensions": true
   },
   "include": [
+    "video.d.ts",
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
