--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
+    "@mux/mux-player-react": "^3.10.1",
     "@neondatabase/serverless": "^0.10.4",
     "@next/eslint-plugin-next": "16.0.1",
     "@next/mdx": "^16.0.1",
@@ -166,6 +167,7 @@
     "embla-carousel-react": "^8.6.0",
     "eslint-config-next": "16.0.1",
     "googleapis": "^144.0.0",
+    "hls.js": "^1.6.15",
     "lenis": "^1.3.13",
     "lucide-react": "^0.453.0",
     "motion": "^12.23.24",
@@ -202,6 +204,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/hls.js": "^1.0.0",
     "@types/node": "^22.18.12",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
