--- a/package.json
+++ b/package.json
@@ -2,24 +2,24 @@
   "name": "eleva-care-app",
   "version": "0.3.1",
   "private": true,
-  "packageManager": "pnpm@9.2.0",
   "engines": {
     "node": ">=24.0.0"
   },
   "scripts": {
     "// ========== DEVELOPMENT ==========": "",
-    "dev": "concurrently --kill-others --names \"NEXT,QSTASH,VIDEO\" --prefix-colors \"cyan,magenta,yellow\" \"pnpm dev:next\" \"pnpm qstash:dev\" \"npx next-video sync -w\"",
-    "dev:next": "NODE_NO_WARNINGS=1 next dev --port 3000",
-    "dev:only": "NODE_NO_WARNINGS=1 next dev --port 3000",
+    "dev": "concurrently --kill-others --names \"NEXT,VIDEO\" --prefix-colors \"cyan,yellow\" \"bun run dev:next\" \"bunx next-video sync -w\"",
+    "dev:full": "concurrently --names \"NEXT,QSTASH,VIDEO\" --prefix-colors \"cyan,magenta,yellow\" \"bun run dev:next\" \"bun run qstash:dev\" \"bunx next-video sync -w\"",
+    "dev:next": "bun --bun next dev --port 3000",
+    "dev:only": "bun --bun next dev --port 3000",
     "// ========== BUILD & PRODUCTION ==========": "",
-    "build": "NODE_NO_WARNINGS=1 next build",
-    "build:force": "NODE_NO_WARNINGS=1 NEXT_SKIP_TYPESCRIPT_CHECK=1 next build",
-    "build:analyze": "cross-env ANALYZE=true pnpm build",
-    "build:debug": "NODE_OPTIONS='--inspect' pnpm build",
-    "build:profile": "pnpm build --profile",
-    "build:memory": "pnpm build --experimental-debug-memory-usage",
-    "start": "NODE_NO_WARNINGS=1 next start",
-    "postbuild": "NODE_NO_WARNINGS=1 NODE_OPTIONS=--experimental-specifier-resolution=node tsx scripts/utilities/update-qstash-schedules.ts || echo 'QStash setup skipped'",
+    "build": "bun --bun next build",
+    "build:force": "NEXT_SKIP_TYPESCRIPT_CHECK=1 bun --bun next build",
+    "build:analyze": "cross-env ANALYZE=true bun run build",
+    "build:debug": "NODE_OPTIONS='--inspect' bun run build",
+    "build:profile": "bun run build --profile",
+    "build:memory": "bun run build --experimental-debug-memory-usage",
+    "start": "bun --bun next start",
+    "postbuild": "[ -n \"$VERCEL\" ] && bun scripts/utilities/update-qstash-schedules.ts || echo 'QStash setup skipped (local build)'",
     "// ========== CODE QUALITY ==========": "",
     "lint": "eslint .",
     "format": "prettier --write .",
@@ -42,45 +42,45 @@
     "test:novu": "vitest run tests/lib/novu-workflow-fix.test.ts",
     "test:novu:integration": "NOVU_INTEGRATION_TEST=true vitest run tests/integration/novu-workflow-execution.test.ts",
     "test:security": "node scripts/test-enhanced-security.js",
-    "test:email": "tsx scripts/test-email-templates.mjs",
+    "test:email": "bun scripts/test-email-templates.mjs",
     "// ========== E2E TESTING (Playwright) ==========": "",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:debug": "playwright test --debug",
     "// ========== QSTASH (Cron Jobs) ==========": "",
-    "qstash:dev": "npx @upstash/qstash-cli@latest dev",
-    "qstash:check": "node scripts/utilities/check-qstash-env.js",
-    "qstash:schedule": "node scripts/utilities/qstash-manager.js schedule",
-    "qstash:list": "node scripts/utilities/qstash-manager.js list",
-    "qstash:cleanup": "node scripts/utilities/qstash-manager.js cleanup",
-    "qstash:stats": "node scripts/utilities/qstash-manager.js stats",
-    "qstash:update": "tsx scripts/utilities/update-qstash-schedules.ts",
+    "qstash:dev": "bunx @upstash/qstash-cli@latest dev",
+    "qstash:check": "bun scripts/utilities/check-qstash-env.js",
+    "qstash:schedule": "bun scripts/utilities/qstash-manager.js schedule",
+    "qstash:list": "bun scripts/utilities/qstash-manager.js list",
+    "qstash:cleanup": "bun scripts/utilities/qstash-manager.js cleanup",
+    "qstash:stats": "bun scripts/utilities/qstash-manager.js stats",
+    "qstash:update": "bun scripts/utilities/update-qstash-schedules.ts",
     "// ========== CACHE (Redis) ==========": "",
-    "cache:clear-clerk": "tsx scripts/utilities/cache-manager.ts clear-clerk",
-    "cache:health": "tsx scripts/utilities/cache-manager.ts health",
-    "cache:stats": "tsx scripts/utilities/cache-manager.ts stats",
+    "cache:clear-clerk": "bun scripts/utilities/cache-manager.ts clear-clerk",
+    "cache:health": "bun scripts/utilities/cache-manager.ts health",
+    "cache:stats": "bun scripts/utilities/cache-manager.ts stats",
     "// ========== NOTIFICATIONS (Novu) ==========": "",
-    "novu:sync": "npx novu@latest sync --bridge-url \"$NOVU_BRIDGE_URL\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"",
-    "novu:sync:dev": "bash -c 'source .env && npx novu@latest sync --bridge-url \"$NGROK_URL/api/webhooks/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
-    "novu:sync:dev:auto": "bash -c 'NGROK_URL=$(curl -s http://localhost:4040/api/tunnels | jq -r \".tunnels[0].public_url\" 2>/dev/null || echo \"http://localhost:3000\") && source .env && npx novu@latest sync --bridge-url \"$NGROK_URL/api/webhooks/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
-    "novu:sync:prod": "bash -c 'source .env && npx novu@latest sync --bridge-url \"https://eleva.care/api/webhooks/novu\" --secret-key \"$NOVU_SECRET_KEY_PROD\" --api-url \"$NOVU_BASE_URL\"'",
-    "novu:sync:preview": "bash -c 'source .env && npx novu@latest sync --bridge-url \"$VERCEL_PREVIEW_URL/api/webhooks/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
-    "novu:diagnostics": "node scripts/test-novu-diagnostics.js",
+    "novu:sync": "bunx novu@latest sync --bridge-url \"$NOVU_BRIDGE_URL\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"",
+    "novu:sync:dev": "bash -c 'source .env && bunx novu@latest sync --bridge-url \"$NGROK_URL/api/webhooks/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
+    "novu:sync:dev:auto": "bash -c 'NGROK_URL=$(curl -s http://localhost:4040/api/tunnels | jq -r \".tunnels[0].public_url\" 2>/dev/null || echo \"http://localhost:3000\") && source .env && bunx novu@latest sync --bridge-url \"$NGROK_URL/api/webhooks/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
+    "novu:sync:prod": "bash -c 'source .env && bunx novu@latest sync --bridge-url \"https://eleva.care/api/webhooks/novu\" --secret-key \"$NOVU_SECRET_KEY_PROD\" --api-url \"$NOVU_BASE_URL\"'",
+    "novu:sync:preview": "bash -c 'source .env && bunx novu@latest sync --bridge-url \"$VERCEL_PREVIEW_URL/api/webhooks/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
+    "novu:diagnostics": "bun scripts/test-novu-diagnostics.js",
     "// ========== EMAIL (React Email) ==========": "",
     "email:dev": "email dev",
     "email:preview": "email dev --dir emails --port 3001",
     "email:export": "email export --dir emails --outDir ./.react-email",
     "// ========== ANALYTICS (PostHog & Bundle) ==========": "",
-    "posthog:dashboards": "npm run setup:posthog-dashboards",
-    "posthog:validate-permissions": "node scripts/utilities/validate-posthog-permissions.js",
-    "setup:posthog-dashboards": "node scripts/utilities/setup-posthog-dashboards.js",
-    "analyze": "ANALYZE=true pnpm build",
-    "analyze:server": "ANALYZE=true BUNDLE_ANALYZE=server pnpm build",
-    "analyze:browser": "ANALYZE=true BUNDLE_ANALYZE=browser pnpm build",
+    "posthog:dashboards": "bun run setup:posthog-dashboards",
+    "posthog:validate-permissions": "bun scripts/utilities/validate-posthog-permissions.js",
+    "setup:posthog-dashboards": "bun scripts/utilities/setup-posthog-dashboards.js",
+    "analyze": "ANALYZE=true bun run build",
+    "analyze:server": "ANALYZE=true BUNDLE_ANALYZE=server bun run build",
+    "analyze:browser": "ANALYZE=true BUNDLE_ANALYZE=browser bun run build",
     "// ========== ENVIRONMENT ==========": "",
-    "env:debug": "node scripts/utilities/debug-env-loading.js",
-    "env:setup": "node scripts/utilities/setup-env-vars.js",
+    "env:debug": "bun scripts/utilities/debug-env-loading.js",
+    "env:setup": "bun scripts/utilities/setup-env-vars.js",
     "// ========== HOOKS ==========": "",
     "prepare": "husky"
   },
@@ -237,17 +237,13 @@
     "vitest": "^4.0.15"
   },
   "overrides": {
-    "punycode": "^2.3.1"
-  },
-  "pnpm": {
-    "overrides": {
-      "@types/react": "19.0.10",
-      "@types/react-dom": "19.0.4",
-      "react": "19.2.0",
-      "react-dom": "19.2.0",
-      "prismjs": "^1.30.0",
-      "prettier": "3.6.2"
-    }
+    "punycode": "^2.3.1",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "prismjs": "^1.30.0",
+    "prettier": "3.6.2"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
