--- a/package.json
+++ b/package.json
@@ -202,6 +202,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/bun": "^1.3.4",
     "@types/hls.js": "^1.0.0",
     "@types/node": "^22.18.12",
     "@types/react": "19.0.10",
