--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
       - name: 📦 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.1' # Pinned for CI reproducibility
+          bun-version: '1.3' # Aligned with Vercel production (bunVersion: "1.x" → 1.3.x)
 
       - name: 🔧 Setup Node.js
         id: setup
@@ -58,7 +58,7 @@ jobs:
       - name: 📦 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.1' # Pinned for CI reproducibility
+          bun-version: '1.3' # Aligned with Vercel production (bunVersion: "1.x" → 1.3.x)
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
@@ -85,7 +85,7 @@ jobs:
       - name: 📦 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.1' # Pinned for CI reproducibility
+          bun-version: '1.3' # Aligned with Vercel production (bunVersion: "1.x" → 1.3.x)
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
@@ -112,7 +112,7 @@ jobs:
       - name: 📦 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.1' # Pinned for CI reproducibility
+          bun-version: '1.3' # Aligned with Vercel production (bunVersion: "1.x" → 1.3.x)
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
@@ -146,7 +146,7 @@ jobs:
       - name: 📦 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.1' # Pinned for CI reproducibility
+          bun-version: '1.3' # Aligned with Vercel production (bunVersion: "1.x" → 1.3.x)
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
@@ -198,7 +198,7 @@ jobs:
       - name: 📦 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.1' # Pinned for CI reproducibility
+          bun-version: '1.3' # Aligned with Vercel production (bunVersion: "1.x" → 1.3.x)
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
@@ -239,7 +239,7 @@ jobs:
       - name: 📦 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.1' # Pinned for CI reproducibility
+          bun-version: '1.3' # Aligned with Vercel production (bunVersion: "1.x" → 1.3.x)
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
@@ -287,7 +287,7 @@ jobs:
       - name: 📦 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.1' # Pinned for CI reproducibility
+          bun-version: '1.3' # Aligned with Vercel production (bunVersion: "1.x" → 1.3.x)
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
@@ -353,7 +353,7 @@ jobs:
       - name: 📦 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.1' # Pinned for CI reproducibility
+          bun-version: '1.3' # Aligned with Vercel production (bunVersion: "1.x" → 1.3.x)
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
