--- a/package.json
+++ b/package.json
@@ -169,7 +169,7 @@
     "hls.js": "^1.6.15",
     "lucide-react": "^0.453.0",
     "motion": "^12.23.24",
-    "next": "16.0.8",
+    "next": "^16.0.10",
     "next-intl": "^4.5.2",
     "next-themes": "^0.4.6",
     "next-video": "^2.6.0",
