--- a/package.json
+++ b/package.json
@@ -244,7 +244,10 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "prismjs": "^1.30.0",
-    "prettier": "3.6.2"
+    "prettier": "3.6.2",
+    "botid": {
+      "next": "$next"
+    }
   },
   "lint-staged": {
     "*.{ts,tsx}": [
