--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
       - name: 📦 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.3' # Aligned with Vercel production (bunVersion: "1.x" → 1.3.x)
+          bun-version: '1.3' # Bun for package installation; Vercel uses Node.js 24.x runtime
 
       - name: 🔧 Setup Node.js
         id: setup
@@ -58,7 +58,7 @@ jobs:
       - name: 📦 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.3' # Aligned with Vercel production (bunVersion: "1.x" → 1.3.x)
+          bun-version: '1.3' # Bun for package installation; Vercel uses Node.js 24.x runtime
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
@@ -85,7 +85,7 @@ jobs:
       - name: 📦 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.3' # Aligned with Vercel production (bunVersion: "1.x" → 1.3.x)
+          bun-version: '1.3' # Bun for package installation; Vercel uses Node.js 24.x runtime
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
@@ -112,7 +112,7 @@ jobs:
       - name: 📦 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.3' # Aligned with Vercel production (bunVersion: "1.x" → 1.3.x)
+          bun-version: '1.3' # Bun for package installation; Vercel uses Node.js 24.x runtime
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
@@ -146,7 +146,7 @@ jobs:
       - name: 📦 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.3' # Aligned with Vercel production (bunVersion: "1.x" → 1.3.x)
+          bun-version: '1.3' # Bun for package installation; Vercel uses Node.js 24.x runtime
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
@@ -198,7 +198,7 @@ jobs:
       - name: 📦 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.3' # Aligned with Vercel production (bunVersion: "1.x" → 1.3.x)
+          bun-version: '1.3' # Bun for package installation; Vercel uses Node.js 24.x runtime
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
@@ -239,7 +239,7 @@ jobs:
       - name: 📦 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.3' # Aligned with Vercel production (bunVersion: "1.x" → 1.3.x)
+          bun-version: '1.3' # Bun for package installation; Vercel uses Node.js 24.x runtime
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
@@ -286,7 +286,7 @@ jobs:
       - name: 📦 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.3' # Aligned with Vercel production (bunVersion: "1.x" → 1.3.x)
+          bun-version: '1.3' # Bun for package installation; Vercel uses Node.js 24.x runtime
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
@@ -350,7 +350,7 @@ jobs:
       - name: 📦 Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.3' # Aligned with Vercel production (bunVersion: "1.x" → 1.3.x)
+          bun-version: '1.3' # Bun for package installation; Vercel uses Node.js 24.x runtime
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
@@ -405,7 +405,7 @@ jobs:
           echo "| Security Scan | ${{ needs.security-scan.result == 'success' && '✅ Pass' || '❌ Fail' }} |" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "## 🔧 Testing Stack" >> $GITHUB_STEP_SUMMARY
-          echo "- **Runtime**: Bun (migrated from Node.js/pnpm)" >> $GITHUB_STEP_SUMMARY
+          echo "- **Runtime**: Bun (package manager) + Node.js 24.x (Vercel runtime)" >> $GITHUB_STEP_SUMMARY
           echo "- **Unit/Integration Tests**: Vitest" >> $GITHUB_STEP_SUMMARY
           echo "- **E2E Tests**: Playwright (cross-browser testing)" >> $GITHUB_STEP_SUMMARY
           echo "- **Coverage**: V8 via @vitest/coverage-v8" >> $GITHUB_STEP_SUMMARY
