feat: Integrate Fumadocs packages and update Next.js configuration
- Added fumadocs-core, fumadocs-mdx, and fumadocs-ui dependencies in package.json and bun.lock for enhanced content management capabilities.
- Updated next.config.ts to utilize Fumadocs MDX for improved MDX compilation and virtual module imports.
- Modified tailwind.config.ts to include styles from fumadocs-ui for better UI integration.
- Completed implementation plans for Fumadocs content centralization, marking several tasks as completed in the project plan.

--- a/package.json
+++ b/package.json
@@ -166,6 +166,9 @@
     "drizzle-orm": "^0.35.3",
     "embla-carousel-react": "^8.6.0",
     "eslint-config-next": "16.0.10",
+    "fumadocs-core": "^16.4.7",
+    "fumadocs-mdx": "^14.2.5",
+    "fumadocs-ui": "^16.4.7",
     "googleapis": "^144.0.0",
     "hls.js": "^1.6.15",
     "lucide-react": "^0.561.0",
