Update bunfig.toml to use install config and remove test settings
Removed Bun's native test runner configuration in favor of Vitest, as noted in the comments. Added [install] section to enforce exact dependency versions for reproducible builds.

--- a/bunfig.toml
+++ b/bunfig.toml
@@ -1,11 +1,10 @@
 # Bun configuration
 # https://bun.sh/docs/runtime/bunfig
 
-[test]
-# Exclude Playwright E2E tests (run via `playwright test` instead)
-# Exclude deprecated tests
-preload = ["./tests/setup.ts"]
+# Note: Tests are run via Vitest (`bun run test`), not Bun's native test runner
+# See vitest.config.mts for test configuration
 
-[test.coverage]
-enabled = false
+[install]
+# Use exact versions for reproducible builds
+exact = true
 
