--- a/package.json
+++ b/package.json
@@ -206,6 +206,7 @@
     "@eslint/js": "^9.38.0",
     "@jest/globals": "^29.7.0",
     "@next/bundle-analyzer": "^15.5.6",
+    "@react-email/preview-server": "4.3.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.19",
     "@testing-library/jest-dom": "^6.9.1",
