--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "@tiptap/static-renderer": "^3.13.0",
     "@types/mdx": "^2.0.13",
     "@upstash/qstash": "^2.8.4",
+    "@upstash/ratelimit": "2.0.8",
     "@upstash/redis": "^1.35.8",
     "@vercel/analytics": "^1.6.1",
     "@vercel/blob": "^0.27.3",
@@ -164,6 +165,7 @@
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.6.1",
     "drizzle-orm": "^0.35.3",
+    "dub": "0.71.4",
     "embla-carousel-react": "^8.6.0",
     "eslint-config-next": "16.0.10",
     "fumadocs-core": "^16.4.7",
@@ -174,7 +176,7 @@
     "lucide-react": "^0.561.0",
     "motion": "^12.23.26",
     "next": "^16.1.1",
-    "next-intl": "^4.6.0",
+    "next-intl": "4.8.3",
     "next-themes": "^0.4.6",
     "next-video": "^2.6.0",
     "nuqs": "^2.8.5",
